==> gabrieldurante/wireshark_cap/RAVEN USBstick/PAL/AVR/AT90USB1287/Boards/USBSTICK_C/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include "pal_timer.h"

void pal_trx_read_timestamp(uint32_t *timestamp)
{
    /*
     * Everytime a transceiver interrupt is triggred, input capture register of
     * the AVR is latched. The 'sys_time' is concatenated to the ICR to
     * generate the time stamp of the received frame.
     * 'sys_time'   'ICR'
     *  ---------|--------- => 32 bit timestamp
     *   16 bits   16 bits
     */
    *timestamp = (uint32_t)sys_time << (uint32_t)16;
    *timestamp |= (uint32_t)TIME_STAMP_REGISTER;
}

void gpio_init(void)
{
    /* The following pins are output pins.  */
    TRX_PORT1_DDR |= _BV(SEL);
    TRX_PORT1_DDR |= _BV(SCK);
    TRX_PORT1_DDR |= _BV(RST);
    TRX_PORT1_DDR |= _BV(MOSI);
    TRX_PORT1_DDR |= _BV(SLP_TR);

    /* The following pins are input pins.  */
    TRX_PORT1_DDR &= ~_BV(MISO);
}

void pal_led_init(void)
{
    LED_PORT_LED_0 &= ~(1 << LED_PIN_0); // high active
    LED_PORT_LED_1 |= (1 << LED_PIN_1); // low active
    LED_PORT_LED_2 |= (1 << LED_PIN_2); // low active
    LED_PORT_LED_3 |= (1 << LED_PIN_3); // low active
    LED_PORT_DIR_LED_0 |= (1 << LED_PIN_0);
    LED_PORT_DIR_LED_1 |= (1 << LED_PIN_1);
    LED_PORT_DIR_LED_2 |= (1 << LED_PIN_2);
    LED_PORT_DIR_LED_3 |= (1 << LED_PIN_3);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint8_t pin;
    uint8_t *port;
    bool active_dir;

    switch (led_no)
    {
        case LED_0: /* high active */
            pin = LED_PIN_0;
            port = (uint8_t *)&LED_PORT_LED_0;
            active_dir = HIGH;
            break;

        case LED_1: /* low active */
            pin = LED_PIN_1;
            port = (uint8_t *)&LED_PORT_LED_1;
            active_dir = LOW; break;

        case LED_2: /* low active */
            pin = LED_PIN_2;
            port = (uint8_t *)&LED_PORT_LED_2;
            active_dir = LOW; break;

        case LED_3: /* low active */
            pin = LED_PIN_3;
            port = (uint8_t *)&LED_PORT_LED_3;
            active_dir = LOW;
            break;

        default: return;
    }

    switch (led_setting)
    {
        case LED_ON:
            if (active_dir == HIGH)
            {
                *port = *port | (1 << pin);
            }
            else
            {
                *port = *port & (~(1 << pin));
            }
            break;

        case LED_OFF:
            if (active_dir == HIGH)
            {
                *port = *port & (~(1 << pin));
            }
            else
            {
                *port = *port | (1 << pin);
            }
            break;

        case LED_TOGGLE:
        default:
            if ((*port & (1 << pin)) == 0x00)
            {
                *port = *port | (1 << pin);
            }
            else
            {
                *port = *port & (~(1 << pin));
            }
            break;
    }
}

void timer_init_non_generic(void)
{
    /* Select proper clock as timer clock source when radio is sleeping */
    TIMER_SRC_DURING_TRX_SLEEP();

    /*
     * Clear pending output compare matches of all the OCR1A, OCR1B and
     * OCR1C.
     */
    TIFR1 = _BV(OCF1A);
    TIFR1 = _BV(OCF1B);
    TIFR1 = _BV(OCF1C);

    /* Enable the timer overflow interrupt */
    TIMSK1 |= _BV(TOIE1);
}
